--- a/main/res/xml/preferences_offlinedata.xml
+++ b/main/res/xml/preferences_offlinedata.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<PreferenceScreen
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:icon="?attr/settings_sdcard"
-    android:title="@string/settings_title_offlinedata"
-    android:summary="@string/settings_summary_offlinedata" >
+    android:summary="@string/settings_summary_offlinedata"
+    android:title="@string/settings_title_offlinedata">
     <CheckBoxPreference
         android:defaultValue="false"
         android:key="@string/pref_logimages"
@@ -18,21 +17,20 @@
     <CheckBoxPreference
         android:defaultValue="true"
         android:key="@string/pref_showListsInCacheList"
-        android:title="@string/init_listdisplay"
-        android:summary="@string/init_summary_listdisplay" />
+        android:summary="@string/init_summary_listdisplay"
+        android:title="@string/init_listdisplay" />
 
     <Preference
         android:selectable="false"
         android:summary="@string/init_summary_list_initial_load_limit"
         android:title="@string/init_list_initial_load_limit" />
     <cgeo.geocaching.settings.SeekbarPreference
+        android:defaultValue="@integer/list_load_limit_default"
         android:key="@string/pref_list_initial_load_limit"
-        app:min="0"
         app:max="@integer/list_load_limit_max"
-        android:defaultValue="@integer/list_load_limit_default" />
+        app:min="0" />
 
-    <PreferenceCategory android:title="@string/settings_title_gpx"
-        android:layout="@layout/preference_category" >
+    <PreferenceCategory android:title="@string/settings_title_gpx">
         <Preference
             android:key="@string/pref_persistablefolder_gpx"
             android:title="@string/init_gpx_importexportdir" />
@@ -45,30 +43,30 @@
                         android:title="@string/init_gpx_importdir" /> -->
     </PreferenceCategory>
 
-    <PreferenceCategory android:title="@string/init_dbonsdcard_title"
-        android:layout="@layout/preference_category"
-        android:summary="@string/init_dbonsdcard_note">
+    <PreferenceCategory
+        android:summary="@string/init_dbonsdcard_note"
+        android:title="@string/init_dbonsdcard_title">
         <CheckBoxPreference
             android:defaultValue="false"
             android:key="@string/pref_dbonsdcard"
             android:title="@string/init_dbonsdcard" />
     </PreferenceCategory>
 
-    <PreferenceCategory android:title="@string/settings_title_data_dir"
-        android:layout="@layout/preference_category"
-        android:summary="@string/init_dataDir_note">
+    <PreferenceCategory
+        android:summary="@string/init_dataDir_note"
+        android:title="@string/settings_title_data_dir">
         <Preference
             android:key="@string/pref_fakekey_dataDir"
             android:title="@string/init_dataDir" />
     </PreferenceCategory>
 
-    <PreferenceCategory android:title="@string/init_maintenance"
-        android:layout="@layout/preference_category"
-        android:summary="@string/init_maintenance_directories_note">
+    <PreferenceCategory
+        android:summary="@string/init_maintenance_directories_note"
+        android:title="@string/init_maintenance">
         <Preference
             android:key="@string/pref_fakekey_preference_maintenance_directories"
-            android:title="@string/init_maintenance_directories"
-            android:layout="@layout/preference_button" />
+            android:layout="@layout/preference_button"
+            android:title="@string/init_maintenance_directories" />
     </PreferenceCategory>
 
 </PreferenceScreen>
