--- a/main/res/xml/preferences_services_extremcaching_com.xml
+++ b/main/res/xml/preferences_services_extremcaching_com.xml
@@ -5,24 +5,21 @@
     android:key="@string/preference_screen_ec"
     android:title="@string/settings_title_ec" >
 
-    <PreferenceCategory android:title="@string/settings_settings"
-        android:layout="@layout/preference_category" >
+    <PreferenceCategory android:title="@string/settings_settings">
         <CheckBoxPreference
             android:defaultValue="false"
             android:key="@string/pref_connectorECActive"
             android:title="@string/settings_activate_ec" />
-        <cgeo.geocaching.settings.TextPreference
+        <Preference
             android:dependency="@string/pref_connectorECActive"
-            android:layout="@layout/text_preference"
-            android:text="@string/settings_ec_description" />
+            app:summary="@string/settings_ec_description" />
         <cgeo.geocaching.settings.CredentialsPreference
             android:dependency="@string/pref_connectorECActive"
             android:summary="@string/auth_unconnected"
             android:key="@string/pref_fakekey_ec_authorization" />
     </PreferenceCategory>
 
-    <PreferenceCategory android:title="@string/settings_title_appearance"
-        android:layout="@layout/preference_category" >
+    <PreferenceCategory android:title="@string/settings_title_appearance" >
         <ListPreference
             android:defaultValue="1"
             android:dependency="@string/pref_connectorECActive"
@@ -33,8 +30,7 @@
             android:title="@string/init_ec_icons" />
     </PreferenceCategory>
 
-    <PreferenceCategory android:title="@string/settings_information"
-        android:layout="@layout/preference_category" >
+    <PreferenceCategory android:title="@string/settings_information"  >
         <Preference
             android:key="@string/pref_fakekey_ec_website"
             android:title="@string/settings_open_website" />
