--- a/main/res/xml/preferences_services_gcvote_com.xml
+++ b/main/res/xml/preferences_services_gcvote_com.xml
@@ -5,25 +5,22 @@
     android:key="@string/preference_screen_gcvote"
     android:title="@string/init_gcvote" >
 
-    <PreferenceCategory android:title="@string/settings_settings"
-        android:layout="@layout/preference_category" >
+    <PreferenceCategory android:title="@string/settings_settings" >
         <CheckBoxPreference
             android:defaultValue="true"
             android:key="@string/pref_ratingwanted"
             android:summary="@string/init_summary_ratingwanted"
             android:title="@string/init_ratingwanted" />
-        <cgeo.geocaching.settings.TextPreference
+        <Preference
             android:dependency="@string/pref_ratingwanted"
-            android:layout="@layout/text_preference"
-            android:text="@string/init_gcvote_password_description" />
+            app:summary="@string/init_gcvote_password_description" />
         <cgeo.geocaching.settings.CredentialsPreference
             android:dependency="@string/pref_ratingwanted"
             android:summary="@string/auth_unconnected"
             android:key="@string/pref_fakekey_gcvote_authorization" />
     </PreferenceCategory>
 
-    <PreferenceCategory android:title="@string/settings_information"
-        android:layout="@layout/preference_category" >
+    <PreferenceCategory android:title="@string/settings_information" >
         <Preference
             android:key="@string/pref_fakekey_gcvote_website"
             android:title="@string/settings_open_website" />
