--- a/main/res/xml/preferences_services_geokrety_org.xml
+++ b/main/res/xml/preferences_services_geokrety_org.xml
@@ -5,24 +5,21 @@
     android:key="@string/preference_screen_geokrety"
     android:title="@string/init_geokrety" >
 
-    <PreferenceCategory android:title="@string/settings_settings"
-        android:layout="@layout/preference_category" >
+    <PreferenceCategory android:title="@string/settings_settings" >
         <CheckBoxPreference
             android:defaultValue="false"
             android:key="@string/pref_connectorGeokretyActive"
             android:summary="@string/init_summary_geokrety"
             android:title="@string/settings_activate_geokrety" />
-        <cgeo.geocaching.settings.TextPreference
+        <Preference
             android:dependency="@string/pref_connectorGeokretyActive"
-            android:layout="@layout/text_preference"
-            android:text="@string/init_geokrety_description" />
+            app:summary="@string/init_geokrety_description" />
         <cgeo.geocaching.settings.TokenPreference
             android:dependency="@string/pref_connectorGeokretyActive"
             android:key="@string/pref_fakekey_geokrety_authorization" />
     </PreferenceCategory>
 
-    <PreferenceCategory android:title="@string/settings_information"
-        android:layout="@layout/preference_category" >
+    <PreferenceCategory android:title="@string/settings_information" >
         <Preference
             android:key="@string/pref_fakekey_geokrety_website"
             android:title="@string/settings_open_website" />
