--- a/main/res/xml/preferences_services_opencache_uk.xml
+++ b/main/res/xml/preferences_services_opencache_uk.xml
@@ -5,24 +5,21 @@
     android:key="@string/preference_screen_ocuk"
     android:title="@string/init_oc_uk" >
 
-    <PreferenceCategory android:title="@string/settings_settings"
-        android:layout="@layout/preference_category" >
+    <PreferenceCategory android:title="@string/settings_settings" >
         <CheckBoxPreference
             android:defaultValue="false"
             android:key="@string/pref_connectorOCUKActive"
             android:summary="@string/init_summary_oc_uk"
             android:title="@string/settings_activate_oc_uk" />
-        <cgeo.geocaching.settings.TextPreference
+        <Preference
             android:dependency="@string/pref_connectorOCUKActive"
-            android:layout="@layout/text_preference"
-            android:text="@string/init_oc_uk_description" />
+            app:summary="@string/init_oc_uk_description" />
         <cgeo.geocaching.settings.OAuthPreference
             android:dependency="@string/pref_connectorOCUKActive"
             android:key="@string/pref_fakekey_ocuk_authorization" />
     </PreferenceCategory>
 
-    <PreferenceCategory android:title="@string/settings_information"
-        android:layout="@layout/preference_category" >
+    <PreferenceCategory android:title="@string/settings_information" >
         <Preference
             android:key="@string/pref_fakekey_ocuk_website"
             android:title="@string/settings_open_website" />
