--- a/main/res/xml/preferences_services_opencaching_nl.xml
+++ b/main/res/xml/preferences_services_opencaching_nl.xml
@@ -5,24 +5,21 @@
     android:key="@string/preference_screen_ocnl"
     android:title="@string/init_oc_nl" >
 
-    <PreferenceCategory android:title="@string/settings_settings"
-        android:layout="@layout/preference_category" >
+    <PreferenceCategory android:title="@string/settings_settings" >
         <CheckBoxPreference
             android:defaultValue="false"
             android:key="@string/pref_connectorOCNLActive"
             android:summary="@string/init_summary_oc_nl"
             android:title="@string/settings_activate_oc_nl" />
-        <cgeo.geocaching.settings.TextPreference
+        <Preference
             android:dependency="@string/pref_connectorOCNLActive"
-            android:layout="@layout/text_preference"
-            android:text="@string/init_oc_nl_description" />
+            app:summary="@string/init_oc_nl_description" />
         <cgeo.geocaching.settings.OAuthPreference
             android:dependency="@string/pref_connectorOCNLActive"
             android:key="@string/pref_fakekey_ocnl_authorization" />
     </PreferenceCategory>
 
-    <PreferenceCategory android:title="@string/settings_information"
-        android:layout="@layout/preference_category" >
+    <PreferenceCategory android:title="@string/settings_information" >
 
         <Preference
             android:key="@string/pref_fakekey_ocnl_website"
