--- a/main/res/xml/preferences_services_opencaching_pl.xml
+++ b/main/res/xml/preferences_services_opencaching_pl.xml
@@ -1,28 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<PreferenceScreen
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:key="@string/preference_screen_ocpl"
-    android:title="@string/init_oc_pl" >
+    android:title="@string/init_oc_pl">
 
-    <PreferenceCategory android:title="@string/settings_settings"
-        android:layout="@layout/preference_category" >
+    <PreferenceCategory android:title="@string/settings_settings">
         <CheckBoxPreference
             android:defaultValue="false"
             android:key="@string/pref_connectorOCPLActive"
             android:summary="@string/init_summary_oc_pl"
             android:title="@string/settings_activate_oc_pl" />
-        <cgeo.geocaching.settings.TextPreference
+        <Preference
             android:dependency="@string/pref_connectorOCPLActive"
-            android:layout="@layout/text_preference"
-            android:text="@string/init_oc_pl_description" />
+            app:summary="@string/init_oc_pl_description" />
         <cgeo.geocaching.settings.OAuthPreference
             android:dependency="@string/pref_connectorOCPLActive"
             android:key="@string/pref_fakekey_ocpl_authorization" />
     </PreferenceCategory>
 
-    <PreferenceCategory android:title="@string/settings_information"
-        android:layout="@layout/preference_category" >
+    <PreferenceCategory android:title="@string/settings_information">
         <Preference
             android:key="@string/pref_fakekey_ocpl_website"
             android:title="@string/settings_open_website" />
