--- a/main/res/xml/preferences_services_opencaching_ro.xml
+++ b/main/res/xml/preferences_services_opencaching_ro.xml
@@ -5,24 +5,21 @@
     android:key="@string/preference_screen_ocro"
     android:title="@string/init_oc_ro" >
 
-    <PreferenceCategory android:title="@string/settings_settings"
-        android:layout="@layout/preference_category" >
+    <PreferenceCategory android:title="@string/settings_settings" >
         <CheckBoxPreference
             android:defaultValue="false"
             android:key="@string/pref_connectorOCROActive"
             android:summary="@string/init_summary_oc_ro"
             android:title="@string/settings_activate_oc_ro" />
-        <cgeo.geocaching.settings.TextPreference
+        <Preference
             android:dependency="@string/pref_connectorOCROActive"
-            android:layout="@layout/text_preference"
-            android:text="@string/init_oc_ro_description" />
+            app:summary="@string/init_oc_ro_description" />
         <cgeo.geocaching.settings.OAuthPreference
             android:dependency="@string/pref_connectorOCROActive"
             android:key="@string/pref_fakekey_ocro_authorization" />
     </PreferenceCategory>
 
-    <PreferenceCategory android:title="@string/settings_information"
-        android:layout="@layout/preference_category" >
+    <PreferenceCategory android:title="@string/settings_information" >
         <Preference
             android:key="@string/pref_fakekey_ocro_website"
             android:title="@string/settings_open_website" />
