--- a/main/res/xml/preferences_services_send_to_cgeo.xml
+++ b/main/res/xml/preferences_services_send_to_cgeo.xml
@@ -5,8 +5,7 @@
     android:key="@string/preference_screen_sendtocgeo"
     android:title="@string/init_sendToCgeo" >
 
-    <PreferenceCategory android:title="@string/settings_settings"
-        android:layout="@layout/preference_category" >
+    <PreferenceCategory android:title="@string/settings_settings" >
         <EditTextPreference
             android:dialogTitle="@string/init_sendToCgeo_name"
             android:imeOptions="actionDone"
@@ -16,11 +15,11 @@
         <cgeo.geocaching.settings.RegisterSend2CgeoPreference android:title="@string/init_sendToCgeo_register" />
     </PreferenceCategory>
 
-    <PreferenceCategory android:title="@string/settings_information"
-        android:layout="@layout/preference_category" >
-        <cgeo.geocaching.settings.InfoPreference
+    <PreferenceCategory android:title="@string/settings_information" >
+        <Preference
             android:text="@string/init_sendToCgeo_description"
             android:title="@string/settings_info_send2cgeo_title"
+            android:icon="?attr/settings_info_icon"
             app:url="@string/settings_send2cgeo_url"
             app:urlButton="@string/settings_goto_url_button" />
         <Preference
