--- a/main/res/xml/preferences_system.xml
+++ b/main/res/xml/preferences_system.xml
@@ -1,12 +1,12 @@
-<PreferenceScreen
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:icon="?attr/settings_nut"
-    android:title="@string/settings_title_system"
-    android:summary="@string/settings_summary_system" >
+    android:summary="@string/settings_summary_system"
+    android:title="@string/settings_title_system">
 
-    <PreferenceCategory android:title="@string/init_local_file_system"
-        android:layout="@layout/preference_category" android:key="@string/pref_group_localfilesystem">
+    <PreferenceCategory
+        android:key="@string/pref_group_localfilesystem"
+        android:title="@string/init_local_file_system">
         <Preference
             android:key="@string/pref_persistablefolder_basedir"
             android:title="@string/init_base_directory_description" />
@@ -15,63 +15,63 @@
             android:title="Directory for Unit Tests. This setting is only needed for development and only visible in Debug mode" />
     </PreferenceCategory>
 
-    <PreferenceCategory android:title="@string/init_location"
-        android:layout="@layout/preference_category"
-        android:summary="@string/init_location_note">
+    <PreferenceCategory
+        android:summary="@string/init_location_note"
+        android:title="@string/init_location">
         <CheckBoxPreference
             android:defaultValue="true"
             android:key="@string/pref_googleplayservices"
             android:title="@string/init_location_googleplayservices" />
     </PreferenceCategory>
 
-    <PreferenceCategory android:title="@string/init_low_power"
-        android:layout="@layout/preference_category"
-        android:summary="@string/init_low_power_note">
+    <PreferenceCategory
+        android:summary="@string/init_low_power_note"
+        android:title="@string/init_low_power">
         <CheckBoxPreference
             android:defaultValue="false"
             android:key="@string/pref_lowpowermode"
             android:title="@string/init_low_power_mode" />
     </PreferenceCategory>
 
-    <PreferenceCategory android:title="@string/init_force_orientation_sensor_title"
-        android:layout="@layout/preference_category"
-        android:summary="@string/init_force_orientation_sensor_note">
+    <PreferenceCategory
+        android:summary="@string/init_force_orientation_sensor_note"
+        android:title="@string/init_force_orientation_sensor_title">
         <CheckBoxPreference
             android:defaultValue="false"
             android:key="@string/pref_force_orientation_sensor"
             android:title="@string/init_force_orientation_sensor" />
     </PreferenceCategory>
 
-    <PreferenceCategory android:title="@string/init_hardware_acceleration_title"
-        android:layout="@layout/preference_category"
-        android:summary="@string/init_hardware_acceleration_note">
+    <PreferenceCategory
+        android:summary="@string/init_hardware_acceleration_note"
+        android:title="@string/init_hardware_acceleration_title">
         <CheckBoxPreference
             android:key="@string/pref_hardware_acceleration"
             android:title="@string/init_hardware_acceleration" />
     </PreferenceCategory>
 
-    <PreferenceCategory android:title="@string/init_debug_title"
-        android:layout="@layout/preference_category"
-        android:summary="@string/init_debug_note">
+    <PreferenceCategory
+        android:summary="@string/init_debug_note"
+        android:title="@string/init_debug_title">
         <CheckBoxPreference
             android:defaultValue="false"
             android:key="@string/pref_debug"
             android:title="@string/init_debug" />
         <Preference
             android:key="@string/pref_generate_logcat"
-            android:title="@string/about_system_write_logcat"
-            android:layout="@layout/preference_button" />
+            android:layout="@layout/preference_button"
+            android:title="@string/about_system_write_logcat" />
         <Preference
             android:key="@string/pref_memory_dump"
-            android:title="@string/init_create_memory_dump"
-            android:layout="@layout/preference_button" />
+            android:layout="@layout/preference_button"
+            android:title="@string/init_create_memory_dump" />
         <Preference
             android:key="@string/pref_generate_infos_downloadmanager"
-            android:title="@string/about_system_write_infos_downloadmanager"
-            android:layout="@layout/preference_button" />
+            android:layout="@layout/preference_button"
+            android:title="@string/about_system_write_infos_downloadmanager" />
         <Preference
             android:key="@string/pref_view_settings"
-            android:title="@string/view_settings"
-            android:layout="@layout/preference_button" />
+            android:layout="@layout/preference_button"
+            android:title="@string/view_settings" />
     </PreferenceCategory>
 </PreferenceScreen>
